--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -150,7 +150,7 @@
                     {field: 'faultName', width: 100, title: '试验名称'},
                     {field: 'testType', width: 100, title: '试验类型'},
                     {field: 'degree', width:90,title: '试验程度'},
-                    {field: 'time',width:120, title: '试验日期',sort: true},
+                    {field: 'fileTime',width:160, title: '试验日期',sort: true},
                     {field: 'device', width: 100, title: '试验装置'},
                     {field: 'member', width: 90, title: '试验人员'},
                     {field: 'temperature', width: 60, title: '温度'},
